--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,33 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+*::-webkit-scrollbar {
+  width: 29px;
+  width: 13px;
+}
+*::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background-color: #ffffff;
+}
+
+*::-webkit-scrollbar-track:hover {
+  background-color: #fbfbfb;
+}
+
+*::-webkit-scrollbar-track:active {
+  background-color: #B8C0C2;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: #0285f1;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #0677b9;
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: #62A34B;
+}
