--- a/src/App.css
+++ b/src/App.css
@@ -29,10 +29,6 @@
   color: white;
   padding-top: 10px;
 }
-.navbar a {
-  color: white;
-  text-decoration: none;
-}
 
 .main {
   -ms-grid-row: 3;
@@ -40,4 +36,54 @@
   -ms-grid-column-span: 3;
   grid-area: main;
   border-bottom: 20px solid rgb(5, 18, 39);
+}
+
+@media (max-width: 500px) {
+  .App {
+    background-color: rgb(236, 236, 236);
+    -ms-grid-rows: 5vh 95vh;
+    grid-template-rows: 5vh 95vh;
+        grid-template-areas: "navbar navbar navbar" "main main main";
+  }
+  .header {
+    display: none;
+  }
+  .navbar {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 3;
+    -ms-grid-column: 1;
+    grid-area: navbar;
+    padding-top: 0px;
+  }
+  .main {
+    -ms-grid-row: 3;
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 3;
+    grid-area: main;
+    border-bottom: 0px;
+  }
+  @media (max-width: 500px) {
+  .navbar {
+      -ms-grid-row: 1;
+      -ms-grid-row-span: 1;
+      -ms-grid-column: 1;
+      -ms-grid-column-span: 3;
+  }
+  .main {
+      -ms-grid-row: 2;
+      -ms-grid-column: 1;
+      -ms-grid-column-span: 3;
+  }
+  }
+  .navbar {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
+  }
+  .main {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
+  }
 }
