--- a/src/App.scss
+++ b/src/App.scss
@@ -11,21 +11,37 @@
     "navbar main main";
 }
 .header {
-    grid-area: header;
-    background-color:rgb(236, 236, 236);
+  grid-area: header;
+  background-color: rgb(236, 236, 236);
+}
+.navbar {
+  grid-area: navbar;
+  background-color: rgb(5, 18, 39);
+  color: white;
+  padding-top: 10px;
+}
+.main {
+  grid-area: main;
+  border-bottom: 20px solid rgb(5, 18, 39);
+}
+@media (max-width: 500px) {
+  .App {
+    background-color: rgb(236, 236, 236);
+    grid-template-rows: 5vh 95vh;
+    grid-template-areas:
+      "navbar navbar navbar"
+      "main main main";
+  }
+  .header {
+    display: none;
   }
   .navbar {
     grid-area: navbar;
-    background-color: rgb(5, 18, 39);
-    color: white;
-    padding-top: 10px;
-    a{
-        color: white;
-        text-decoration: none;
-    }
+    padding-top: 0px;
+
   }
   .main {
     grid-area: main;
-  border-bottom: 20px solid  rgb(5, 18, 39);
-
+    border-bottom: 0px ;
   }
+}
