--- a/src/components/chat/ChatLayout.css
+++ b/src/components/chat/ChatLayout.css
@@ -1,4 +1,5 @@
-.chat {
+@charset "UTF-8";
+.ChatLayout {
   background-color: rgb(236, 236, 236);
   height: 100%;
   display: -ms-grid;
@@ -10,15 +11,82 @@
   gap: 0px 0px;
       grid-template-areas: "chat_messages chat_info";
 }
-
-.chat_messages {
+.ChatLayout .chat_winodw {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   border: 20px solid white;
   border-bottom: 0px;
   grid-area: chat_messages;
+  position: relative;
 }
-.chat_messages .send_message {
+.ChatLayout .chat_winodw .send_message {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 7vh;
+}
+.ChatLayout .chat_winodw .send_message .form_inputs {
+  width: 80%;
+  margin-right: 2.5%;
+  height: 25px;
+  border: 0px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.67);
+}
+.ChatLayout .chat_winodw .send_message .form_inputs :active {
+  border-bottom: 1px solid rgba(8, 0, 255, 0.67);
+}
+.ChatLayout .chat_info {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+  grid-area: chat_info;
+  background-color: rgb(255, 255, 255);
+  text-align: center;
+}
+.ChatLayout input {
+  outline: none;
+}
+
+.messages {
+  height: 78vh;
+  margin: 20px;
+  margin-right: 5px;
+  overflow-y: auto;
+  margin-bottom: 0px;
+}
+.messages .anchor {
+  height: 30px;
+}
+.messages .singleMessage {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  background-color: rgb(250, 250, 250);
+  border-radius: 50px 0 0 50px;
+  margin-top: 10px;
+  margin-right: 20px;
+}
+.messages .singleMessage .userPhoto img {
+  border-radius: 50%;
+  margin-right: 30px;
+}
+.messages .↓ {
+  position: absolute;
+  bottom: 130px;
+  right: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -28,21 +96,114 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  border: 1px solid red;
-  height: 10%;
+  font-size: xx-large;
+  border-radius: 50%;
+  color: aliceblue;
+  -webkit-box-shadow: black;
+          box-shadow: black;
+  background-color: #0285f1;
+  -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+  box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+  cursor: pointer;
+}
+.messages .↓ :hover {
+  background-color: #1e77bf;
+  border-radius: 50%;
+  -webkit-transition: background-color 0.59s;
+  transition: background-color 0.59s;
 }
 
-.chat_info {
-  -ms-grid-row: 1;
-  -ms-grid-column: 3;
-  grid-area: chat_info;
-  background-color: rgb(255, 255, 255);
-  text-align: center;
-}
-
-.messageBlock {
-  height: 75vh;
-  margin: 20px;
-  margin-right: 5px;
-  overflow-y: auto;
+@media (max-width: 500px) {
+  .ChatLayout {
+    background-color: rgb(227, 227, 227);
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .ChatLayout .chat_winodw {
+    border: 0px;
+    border-bottom: 0px;
+    width: 100vw;
+    position: relative;
+  }
+  .ChatLayout .chat_winodw .send_message {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    height: 7vh;
+    width: 100%;
+    position: absolute;
+    bottom: 15px;
+  }
+  .ChatLayout .chat_winodw .send_message .form_inputs {
+    width: 100%;
+    margin: 10px;
+  }
+  .ChatLayout .chat_info {
+    display: none;
+  }
+  .messages {
+    height: 90%;
+    width: 93%;
+    margin-left: 20px;
+  }
+  .messages .anchor {
+    height: 0px;
+  }
+  .messages .singleMessage {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    background-color: rgba(250, 250, 250, 0);
+    border-radius: 50px 0 0 50px;
+    margin-top: 10px;
+  }
+  .messages .singleMessage .userPhoto {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+  .messages .singleMessage .userPhoto img {
+    border-radius: 50%;
+    margin-right: 10px;
+    width: 50px;
+  }
+  .messages .singleMessage .message_body {
+    background-color: rgb(255, 255, 255);
+    padding: 5px;
+    border-radius: 0 10px 10px 10px;
+  }
+  .messages .singleMessage .message_body h3 {
+    color: #0285f1;
+    margin: 5px;
+  }
+  .messages .↓ {
+    bottom: 80px;
+    font-size: 45px;
+    cursor: pointer;
+  }
+  .messages .↓ :hover {
+    background-color: #1e77bf;
+    border-radius: 50%;
+    -webkit-transition: background-color 0.59s;
+    transition: background-color 0.59s;
+  }
 }
