--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,10 +1,15 @@
-.header{
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 0 40px;
-    h2{
-        margin: 10px;
-    }
+.header {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0 40px;
+  h2 {
+    margin: 10px;
+  }
+}
+@media (max-width: 500px) {
+  .header {
+    display: none;
+  }
 }
