--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -10,23 +10,55 @@
       -ms-flex-align: center;
           align-items: center;
 }
-.navbar div {
+.navbar .nav {
+  width: 95%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  color: white;
+  cursor: pointer;
+}
+.navbar .nav div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 95%;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   height: 50px;
   padding-left: 20px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
 }
-.navbar .active {
+.navbar .nav div p {
+  margin-left: 20px;
+}
+.navbar .nav .active {
   background-color: #0285f1;
   border-radius: 8px;
 }
+.navbar .menu:hover {
+  background-color: rgba(0, 2, 24, 0.7803921569);
+  -webkit-transition: background-color 0.29s;
+  transition: background-color 0.29s;
+}
 .navbar a {
-  margin-left: 15px;
+  text-decoration: none;
+}
+
+@media (max-width: 500px) {
+  .navbar {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100vw;
+  }
 }
