--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -1,22 +1,41 @@
-.navbar{
+.navbar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .nav {
+    width: 95%;
+    box-sizing: border-box;
+    color: white;
+    cursor: pointer;
+    div {
+      display: flex;
+      align-items: center;
+      flex-direction: row;
+      height: 50px;
+      padding-left: 20px;
+      p {
+        margin-left: 20px;
+      }
+    }
+    .active {
+      background-color: #0285f1;
+      border-radius: 8px;
+    }
+  }
+  .menu:hover {
+    background-color: #000218c7;
+    transition: background-color 0.29s;
+  }
+
+  a {
+    text-decoration: none;
+  }
+}
+@media (max-width: 500px) {
+.navbar {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    div{
-        display: flex;
-        align-items: center;
-        width: 95%;
-        height: 50px;
-        padding-left: 20px;
-        box-sizing: border-box;
-
-    }
-    .active{
-        background-color:  #0285f1;
-        border-radius: 8px;
-    }
-
-    a{
-        margin-left: 15px;
-    }
+    width: 100vw;
+}
 }
